--- a/index.html
+++ b/index.html
@@ -1,34 +1,149 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+<meta charset="UTF-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<title>Osasu @ ProjectOsa</title>
 
-  <title>Osasu Eboh's Page</title>
-  <meta name="description" content="A page about Osasu">
-  <meta name="author" content="oe37@cornell.edu">
+<!-- Google fonts -->
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="css/style.css?v=1.0">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+<!-- font awesome -->
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+<!-- bootstrap -->
+<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+
+<!-- animate.css -->
+<link rel="stylesheet" href="assets/animate/animate.css" />
+
+
+<!-- gallery -->
+<link rel="stylesheet" href="assets/gallery/blueimp-gallery.min.css">
+
+<!-- favicon -->
+<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+<link rel="icon" href="images/favicon.png" type="image/x-icon">
+
+<link rel="stylesheet" type="text/css" href="assets/slidingheader/layout-simple.css" />
+
+
+
+<link rel="stylesheet" href="assets/style.css">
+
 </head>
 
-<body>
-	 <img id="mainpic" src="pic/me.jpg" alt="Smiley face"> 
-	<h2>Osasu Eboh - <span style="color: red">oe37@cornell.edu</span></h2>
-	<p>A programmer programming programs for my programming programs :)</p>
-<!--  <script src="js/scripts.js"></script>-->
+<body id="home">
+        <div id="container">
+            <header class="intro">
+                <div class="intro__content">
+                    <h1>Osasumwen Eboh</h1>
+
+
+                        <button class="trigger">
+                            <svg width="100%" height="100%" viewBox="0 0 60 60" preserveAspectRatio="none">
+                                <g class="icon icon--grid">
+                                    <rect x="32.5" y="5.5" width="22" height="22"/>
+                                    <rect x="4.5" y="5.5" width="22" height="22"/>
+                                    <rect x="32.5" y="33.5" width="22" height="22"/>
+                                    <rect x="4.5" y="33.5" width="22" height="22"/>
+                                </g>
+                                <g class="icon icon--cross">
+                                    <line x1="4.5" y1="55.5" x2="54.953" y2="5.046"/>
+                                    <line x1="54.953" y1="55.5" x2="4.5" y2="5.047"/>
+                                </g>
+                            </svg>
+                            <span>View content</span>
+                        </button>
+                </div><!-- /intro__content -->
+            </header><!-- /intro -->
+
+            <section class="items-wrap">
+            <div class="container">
+                <div class="spacer">
+                <div class="row content-row">
+                    <div class="col-sm-12 fadeInUp wowload">
+                        <h2>Osasu Eboh</h2>
+                        <p><font color="red">Cornell Tech '17 - New York, NY</font></p>
+                        <p>Software engineer, technologist, fitness addict.  I've worked on several full stack projects, but focus mainly on backend development.  Favorite stack is AngularJS, Node/Express, and PostGres (starting to fall in love with Python). Check out my <a href="https://github.com/osawill"><i>Github</i></a></p>
+                        <div>
+<!--                            <h3>Past Projects</h3>-->
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            </section>
+
+        </div><!-- /container -->
+
+
+
+
+<div class="about">
+    <div class="overlay spacer text-center">
+    <div class="container">
+    <h2><b>Github</b></h2>
+    <div class="wowload fadeInUp social">
+        <a href="https://github.com/osawill"><i class="fa fa-github fa-3x"></i></a>
+        <!-- a href="#"><i class="fa fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fa fa-instagram fa-2x"></i></a>
+        <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fa fa-flickr fa-2x"></i></a -->
+    </div>
+
+    </div>
+    </div>
+</div>
+
+
+
+
+
+
+<!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+    <!-- The container for the modal slides -->
+    <div class="slides"></div>
+    <!-- Controls for the borderless lightbox -->
+    <h3 class="title">title</h3>
+    <a class="prev">‹</a>
+    <a class="next">›</a>
+    <a class="close">×</a>
+    <!-- The modal dialog, which will be used to wrap the lightbox content -->
+</div>
+
+
+
+
+
+<!-- jquery -->
+<script src="assets/jquery.js"></script>
+
+<!-- wow script -->
+<script src="assets/wow/wow.min.js"></script>
+
+<!-- slider -->
+<script src="assets/slidingheader/classie.js"></script>
+
+
+<!-- boostrap -->
+<script src="assets/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+
+<!-- jquery mobile -->
+<script src="assets/mobile/touchSwipe.min.js"></script>
+
+
+<!-- jquery mobile -->
+<script src="assets/respond/respond.js"></script>
+
+<!-- gallery -->
+<script src="assets/gallery/jquery.blueimp-gallery.min.js"></script>
+
+<!-- custom script -->
+<script src="assets/script.js"></script>
+
 </body>
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-84136260-1', 'auto');
-ga('send', 'pageview');
-
-</script>
 </html>
