Fixed background size

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="col-sm-12 fadeInUp wowload">
                         <h2>Osasu Eboh</h2>
                         <p><font color="red">Cornell Tech '17 - New York, NY</font></p>
-                        <p>Software engineer, technologist, fitness addict.  I've worked on several full stack projects, but focus mainly on backend development.  Favorite stack is AngularJS, Node/Express, and PostGres (starting to fall in love with Python). Check out my <a href="https://github.com/osawill"><i>Github</i></a></p>
+                        <p>Software engineer, technologist, fitness addict.  I've worked on several full stack projects, but focus mainly on backend development.  My favorite stack is AngularJS, Node/Express, and PostGres (starting to fall in love with Python). Enough long talk, check out my <a href="https://github.com/osawill"><i>Github</i></a>!</p>
                         <div>
 <!--                            <h3>Past Projects</h3>-->
                         </div>
